--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
-
+@import "./../components/CampaignCard/CampaignCard.css";
 * {
   box-sizing: border-box;
 }
@@ -8,5 +8,16 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: "Lato", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
   font-family: "Lato", sans-serif;
 }
